--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,5 @@
-**/a.out
-**/core
+.gitignore
+lib/
 
-**/eval_preproc
-**/test_build.sh
-**/.vimspector.json
-**/*.o
-
-my_string/my_string
-my_vector/my_vector
-my_hashmap/my_hashmap
-my_set/my_set
-
+scratch/
 old/
-working/
-
-cloc.sh
-cloc-with-test.sh
-clean.sh
-
-test/scratch/
